--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </script>
 </head>
 <body class="font-tiltNeon">
-    <header class="bg-secondaryColor h-24 w-full leading-5 border-2 border-solid border-black text-whiteColor fixed px-5 flex flex-col justify-center">
+    <header class="bg-secondaryColor h-24 w-full leading-5 border-2 border-solid border-black text-whiteColor absolute px-5 flex flex-col justify-center">
         <p>Maxsuel Fernando</p>
         <p>maxsuel.dev@gmail.com</p>
     </header>
@@ -52,32 +52,26 @@
             <button class="mt-6 text-xl font-bold bg-secondaryColor border-2 border-black border-solid rounded-3xl px-8 py-3">Entrar em contato</button>
         </section>
         <section class="sobre bg-whiteColor py-14 px-10">
-            <div>
-                <h2 class="text-3xl">Sobre</h2>
-                <h3>Conheça um pouco sobre mim</h3>
+            <h2 class="text-3xl pb-4">Sobre</h2>
+            <h3 class="text-xl">Conheça um pouco sobre mim</h3>
     
-                <hr>
+            <hr class="h-0.5 bg-secondaryColor mt-2 mb-8">
                     
-                <div>
-                    <h3>Desenvolvedor Front-end |</h3> 
-                    <h3>Analista de Sistemas</h3>
-                </div>
-                <div>
-                    <p>Estudo desenvolvimento Front-End desde quando fazia faculdade    ...Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, repellat sit, a repellendus eos veritatis quo temporibus labore sequi earum eaque distinctio, et esse maxime dolore vero quae? Corporis, aspernatur!
-                    Repudiandae autem vero esse, debitis, incidunt facilis pariatur excepturi laudantium tenetur facere soluta ex numquam dicta voluptatem perferendis! Dignissimos consequatur veritatis est sequi saepe modi ea ab non eligendi sapiente.
-                    Ipsum pariatur delectus accusantium dolorum ullam optio placeat officia. Harum, cupiditate, unde quas non consectetur facere fuga ut necessitatibus quidem voluptas vel corporis aliquam! Illum repellendus quisquam explicabo vel consequuntur.
-                    Illum, dolores ipsam nobis sed voluptatibus impedit maxime ipsum voluptas officiis quis vitae voluptates deserunt excepturi? Nam tenetur veniam maxime impedit iusto eum cum ipsum fuga. Maxime labore nisi quisquam.</p>
-                    <div>
-                        <img class="maxsuelfernando" src="img/sobre/me.jpg" alt="Maxsuel Fernando">
-                    </div>
-                </div>
-                <div>
-                    <div>
-                        <h3>(82) 99980-8600</h3>
-                        <h3>Maceió - AL</h3>
-                    </div>    
-                </div>
+            <div class="text-xl">
+                <h3>Desenvolvedor Front-end |</h3> 
+                <h3>Analista de Sistemas</h3>
             </div>
+            <p class="py-6">Estudo desenvolvimento Front-End desde quando fazia faculdade    ...Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, repellat sit, a repellendus eos veritatis quo temporibus labore sequi earum eaque distinctio, et esse maxime dolore vero quae? Corporis, aspernatur!
+                Repudiandae autem vero esse, debitis, incidunt facilis pariatur excepturi laudantium tenetur facere soluta ex numquam dicta voluptatem perferendis! Dignissimos consequatur veritatis est sequi saepe modi ea ab non eligendi sapiente.
+                Ipsum pariatur delectus accusantium dolorum ullam optio placeat officia. Harum, cupiditate, unde quas non consectetur facere fuga ut necessitatibus quidem voluptas vel corporis aliquam! Illum repellendus quisquam explicabo vel consequuntur.
+                Illum, dolores ipsam nobis sed voluptatibus impedit maxime ipsum voluptas officiis quis vitae voluptates deserunt excepturi? Nam tenetur veniam maxime impedit iusto eum cum ipsum fuga. Maxime labore nisi quisquam.</p>
+            <div class="flex">
+                <img class="w-1/2 h-1/2" src="img/sobre/me.jpg" alt="Maxsuel Fernando">
+                <div class="flex flex-col ml-4 justify-end">
+                    <h3>(82) 99980-8600</h3>
+                    <h3>Maceió - AL</h3>
+                </div>
+            </div>    
         </section>
     </main>
     <footer>
